--- a/templates/expired.html
+++ b/templates/expired.html
@@ -6,7 +6,7 @@
         <h1 class="h1">Enlace Expirado</h1>
         <p class="p">Este enlace era válido, pero ha caducado (72 horas).</p>
         <div class="callout">
-        <p>Solicita un nuevo enlace o contacta a <a href="mailto:digital@insetti.com.mx">soporte</a>.</p>
+        <p>Solicita un nuevo enlace o contacta a <a href="mailto:contacto@insetti.com.mx">soporte</a>.</p>
         </div>
     </section>
 {% endblock %}
