--- a/templates/invalid.html
+++ b/templates/invalid.html
@@ -6,7 +6,7 @@
         <h1 class="h1">Enlace Inválido</h1>
         <p class="p">No pudimos reconocer este enlace. Verifica la URL completa.</p>
         <div class="callout">
-        <p>Si persiste, contacta a <a href="mailto:digital@insetti.com.mx">soporte</a>.</p>
+        <p>Si persiste, contacta a <a href="mailto:contacto@insetti.com.mx">soporte</a>.</p>
         </div>
     </section>
 {% endblock %}
